# Projet-12

./: .coverage  .dockerignore  .gitattributes  .gitignore  Auvin_Thomas_rapport_metier_032026.docx  Dockerfile.api  Dockerfile.ui  README.md  architecture.puml  docker-compose.yml  main.py  mlflow.db  project_paths.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: economics_store.py  main.py  model_loader.py  schemas.py  services.py
artifacts/: crop_profile.csv  model.joblib  model_1_crop.joblib  model_1_crop_meta.json  model_1_general.joblib  model_1_general_meta.json  model_2_meta.json  model_2_recommendation.joblib  model_meta.json
data/reference/: economics.sqlite
notebooks/: 01_eda_sources.ipynb  01_eda_sources_revised.ipynb  02_eda_analysis_revised.ipynb  03_modeling_baseline.ipynb  03_modeling_baseline_cleaned.ipynb  03_modeling_baseline_cleaned_revised.ipynb  04_modeling_secondary_recommendation.ipynb  04_modeling_secondary_recommendation_revised.ipynb
notebooks/archives/: 04_modeling_profile_wave2.ipynb  05_target_transform_benchmark_sample.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: init_economics_db.py
src/data_manage/: load_data.py
src/utils/: eda.py
tests/: test_api.py  test_economics_store.py  test_services_helpers.py  test_services_routing.py
ui/: economics_ui.py  requirements.txt  streamlit_app.py
