[project]
name = "projet-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10,<4",
    "numpy>=2.4.3",
    "pandas>=2.2,<3",
    "prince>=0.17.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.52",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/init_economics_db.py" = ["E402"]